--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/vschool-level5-group-fullstack/group-fullstack#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "date-and-time": "^1.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
